--- a/SpringBootWork/src/main/resources/application.properties
+++ b/SpringBootWork/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
